Fix action-list background color, sidebar nav-leaf alignment

--- a/src/less/components/action-list.less
+++ b/src/less/components/action-list.less
@@ -43,7 +43,7 @@
         line-height: 1.1;
         user-select: none;
         border-radius: 2px;
-        background-color: inherit;
+        background-color: transparent;
         color: @brand-secondary-dark-2;
         display: flex;
         padding: 0;
