--- a/src/less/components/sidebar.less
+++ b/src/less/components/sidebar.less
@@ -149,6 +149,7 @@
                             height: 100%;
                             width: 0.125rem;
                             left: 0;
+                            top: 0;
                             background-color: @brand-bg-gray;
                         }
 
